[package]
name = "twig"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ratatui = "0.28"
crossterm = "0.28"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
